[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "yunbk"
version = "0.2.2"
authors = [{name = "dantezhu", email = "zny2008@gmail.com"}]
license = {text = "MIT"}
description = "make backup easier"
urls = {Homepage = "https://github.com/dantezhu/yunbk"}
dependencies = ["paramiko", "sh", "grandfatherson"]

[tool.setuptools]
zip-safe = false
platforms = ["any"]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["ez_setup"] # examples; tests
namespaces = false
